--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ToCheck">
         <activity
+            android:name=".activity.DoneActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.ShowActivity"
             android:exported="false" />
         <activity
